Fixed spacing and row height, added ellipses to collapsed block

--- a/Shared/css/codeviewer.css
+++ b/Shared/css/codeviewer.css
@@ -841,11 +841,15 @@
   }
 
   .blockBtnSlot {
-      min-width: 12px;
+      min-width: 11px;
       display: inline-block;
       text-align: center;
-      line-height: 12px;
-      font-size: 10pt;
+      line-height: 11px;
+      max-height: 11px;
+      -webkit-box-sizing:border-box;
+      -moz-box-sizing:border-box;
+      -ms-box-sizing:border-box;
+      box-sizing:border-box;
   }
   .blockBtnSlot.open-block::before {
       content: '-';
@@ -854,11 +858,14 @@
       content: '+';
   }
   .blockBtnSlot.occupied {
-    border: 1px solid black;
+    border: 1px  solid black;
     border-radius: 50%;
     cursor: pointer;
   }
   .blockBtnSlot.occupied:hover {
     background: var(--color-primary);
     color: #fff;
+  }
+  .blockEllipses {
+      font-weight: bold;
   }
